@@ -1,6 +1,7 @@
 version <unreleased>
 
 Extractors
+* [openload] Fix extraction (#10408)
 + [ustream] Support the new HLS streams (#10698)
 
 version 2016.09.19
